role functions transfered to roleService